Trying cube animation

--- a/resources/style.css
+++ b/resources/style.css
@@ -19,3 +19,12 @@ a {
     margin-bottom: 0px;
     padding: 0px 0px;
 }
+
+#button{
+  position:absolute;
+  bottom: 50px;
+  right:10px;
+  z-index: 110;
+  width:100px;
+  height:60px;
+}
