--- a/game/test page/style.css
+++ b/game/test page/style.css
@@ -1,8 +1,19 @@
 #button{
   position:absolute;
-  bottom: 50px;
-  right:10px;
+  bottom: 10px;
+  left:10px;
+  float:left;
   z-index: 110;
-  width:100px;
-  height:60px;
+  width:60px;
+  height:120px;
+}
+
+#reLoad{
+  position:absolute;
+  bottom: 10px;
+  left:70px;
+  float:left;
+  z-index: 110;
+  width:80px;
+  height:80px;
 }
