--- a/game/test page/style.css
+++ b/game/test page/style.css
@@ -1,11 +1,11 @@
-#button{
+#bt{
   position:absolute;
   bottom: 10px;
   left:10px;
   float:left;
   z-index: 110;
-  width:60px;
-  height:120px;
+  width:50px;
+  height:100px;
 }
 
 #reLoad{
@@ -14,6 +14,48 @@
   left:70px;
   float:left;
   z-index: 110;
-  width:80px;
-  height:80px;
+  width:70px;
+  height:70px;
 }
+
+#score{
+  position:absolute;
+  top: 150px;
+  right:10px;
+  float:right;
+  z-index: 110;
+  width:60px;
+  height:140px;
+}
+
+#bombTime{
+  position:absolute;
+  top: 10px;
+  left:30px;
+  float:left;
+  z-index: 110;
+  width:53px;
+  height:140px;
+}
+
+#bullet{
+  position:absolute;
+  top: 10px;
+  left:90px;
+  float:left;
+  z-index: 110;
+  width:60px;
+  height:140px;
+}
+
+#alienNum{
+  position:absolute;
+  top: 10px;
+  left:170px;
+  float:left;
+  z-index: 110;
+  width:60px;
+  height:140px;
+}
+
+
