--- a/resources/style.css
+++ b/resources/style.css
@@ -83,3 +83,50 @@ a {
   height:140px;
 }
 
+#scoreArea{
+  position:absolute;
+  top: 180px;
+  right:0px;
+  float:right;
+  z-index: 114;
+  color:#82C7E5;
+  font-size:48px ;
+  font-family: Arial;
+  font-weight: bold;
+}
+
+#bulletArea{
+  position:absolute;
+  top: 10px;
+  left:90px;
+  float:left;
+  z-index: 114;
+  color:#82C7E5;
+  font-size:24px ;
+  font-family: Arial;
+  font-weight: bold;
+}
+
+#bombArea{
+  position:absolute;
+  top: 10px;
+  left:30px;
+  float:left;
+  z-index: 114;
+  color:#82C7E5;
+  font-size:24px ;
+  font-family: Arial;
+  font-weight: bold;
+}
+
+#alienArea{
+  position:absolute;
+  top: 10px;
+  left:170px;
+  float:left;
+  z-index: 114;
+  color:#82C7E5;
+  font-size:24px ;
+  font-family: Arial;
+  font-weight: bold;
+}
