--- a/game/test page/style.css
+++ b/game/test page/style.css
@@ -24,7 +24,7 @@
   right:0px;
   float:right;
   z-index: 110;
-  width:55px;
+  width:60px;
   height:140px;
 }
 
@@ -60,48 +60,61 @@
 
 #scoreArea{
   position:absolute;
-  top: 180px;
-  right:0px;
+  top: 230px;
+  right:-8px;
   float:right;
   z-index: 114;
   color:#82C7E5;
-  font-size:48px ;
+ /* background-color: red;*/
+  font-size:42px ;
   font-family: Arial;
   font-weight: bold;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
 
 #bulletArea{
   position:absolute;
-  top: 10px;
-  left:90px;
+  top: 90px;
+  left:93px;
   float:left;
   z-index: 114;
   color:#82C7E5;
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+   -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
 
 #bombArea{
   position:absolute;
-  top: 10px;
-  left:30px;
+  top: 90px;
+  left:26px;
   float:left;
   z-index: 114;
   color:#82C7E5;
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+   -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
 
 #alienArea{
   position:absolute;
-  top: 10px;
-  left:170px;
+  top: 90px;
+  left:172px;
   float:left;
   z-index: 114;
   color:#82C7E5;
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+   -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
