--- a/resources/style.css
+++ b/resources/style.css
@@ -93,6 +93,9 @@ a {
   font-size:48px ;
   font-family: Arial;
   font-weight: bold;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
 
 #bulletArea{
@@ -105,6 +108,9 @@ a {
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+   -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg);
 }
 
 #bombArea{
@@ -117,6 +123,9 @@ a {
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+   -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
 
 #alienArea{
@@ -129,4 +138,7 @@ a {
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
 }
