--- a/game/test page/style.css
+++ b/game/test page/style.css
@@ -1,4 +1,4 @@
-#bt{
+  #bt{
   position:absolute;
   bottom: 10px;
   left:10px;
@@ -115,6 +115,37 @@
   font-family: Arial;
   font-weight: bold;
    -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
+}
+
+#myVideo{
+   position:absolute;
+  top: 0px;
+  left:40px;
+  float:left;
+  z-index: 120;
+  width:600;
+  height:400;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
+}
+
+#videoControl{
+  position:absolute;
+  top: 10px;
+  left:0px;
+  z-index: 130;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 9px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  -o-transform: rotate(90deg); 
   -webkit-transform: rotate(90deg); 
   -moz-transform: rotate(90deg); 
 }
