--- a/resources/style.css
+++ b/resources/style.css
@@ -45,7 +45,7 @@ a {
 
 #score{
   position:absolute;
-  top: 210px;
+  top: 180px;
   right:0px;
   float:right;
   z-index: 110;
@@ -85,12 +85,12 @@ a {
 
 #scoreArea{
   position:absolute;
-  top: 180px;
-  right:0px;
+  top: 230px;
+  right:-8px;
   float:right;
   z-index: 114;
   color:#82C7E5;
-  font-size:48px ;
+  font-size:42px ;
   font-family: Arial;
   font-weight: bold;
   -o-transform: rotate(90deg); 
@@ -100,8 +100,8 @@ a {
 
 #bulletArea{
   position:absolute;
-  top: 10px;
-  left:90px;
+  top: 90px;
+  left:93px;
   float:left;
   z-index: 114;
   color:#82C7E5;
@@ -115,8 +115,8 @@ a {
 
 #bombArea{
   position:absolute;
-  top: 10px;
-  left:30px;
+  top: 90px;
+  left:26px;
   float:left;
   z-index: 114;
   color:#82C7E5;
@@ -130,14 +130,45 @@ a {
 
 #alienArea{
   position:absolute;
-  top: 10px;
-  left:170px;
+  top: 90px;
+  left:172px;
   float:left;
   z-index: 114;
   color:#82C7E5;
   font-size:24px ;
   font-family: Arial;
   font-weight: bold;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
+}
+
+#myVideo{
+  position:absolute;
+  top: 100px;
+  left:-100px;
+  float:left;
+  z-index: 120;
+  width:600;
+  height:400;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
+}
+
+#videoControl{
+  position:absolute;
+  top: 10px;
+  left:0px;
+  z-index: 130;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 9px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
   -o-transform: rotate(90deg); 
   -webkit-transform: rotate(90deg); 
   -moz-transform: rotate(90deg); 
