--- a/resources/style.css
+++ b/resources/style.css
@@ -173,3 +173,22 @@ a {
   -webkit-transform: rotate(90deg); 
   -moz-transform: rotate(90deg); 
 }
+
+
+#introVideo{
+  position:absolute;
+  top: 10px;
+  left:0px;
+  z-index: 130;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 9px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  -o-transform: rotate(90deg); 
+  -webkit-transform: rotate(90deg); 
+  -moz-transform: rotate(90deg); 
+}
